tests/paczka2/big_fuzzy/48078854.err
Error in line 6: sDNziV8 S225 42,93
Error in line 13: A176 A176 1v,5
Error in line 16: 2YzeRsH6xFl S225 -1,8
Error in line 19: Tw6q A176 99,81
Error in line 20: Tw6q A176 398,4
Error in line 21: l1HHz A754 65,4
Error in line 7: sDNziV8 S225 82,1
Error in line 45: sDNziV8 A754 40,4
Error in line 47: l1HHz S225 23,4
Error in line 70: lEDUruF S225 0,4
Error in line 71: A176 S225 80,8
Error in line 76: A176 A176 11,3
Error in line 81: A176 A754 83,9
Error in line 86: A176 S797 19,9
Error in line 85: l1HHz S225 50,3
Error in line 103: sDNziV8 A754 59,1
Error in line 100: l1HHz S797 13,8
Error in line 105: 2YzeRsH6xFl S225 52,2
Error in line 84: snFsP0 S225 366,0
Error in line 110: l1HHz A754 50,8
Error in line 122: Tw6q S797 17,2
Error in line 108: A176 A176 55,1
Error in line 127: A176 S225 33,4
Error in line 120: lEDUruF S225 46,4
Error in line 129: 2YzeRsH6xFl A754 50,0
Error in line 142: A176 S225 54,3
Error in line 147: A176 S797 4,1
Error in line 148: A176 A176 58,3
Error in line 149: A176 A754 85,7
Error in line 173: lEDUruF S797 29,3
Error in line 176: A176 A754 90,8
Error in line 179: A176 S225 100,0
Error in line 181: sDNziV8 S225 67,0
Error in line 177: lEDUruF S225 22,5
Error in line 174: l1HHz A176 41,7
Error in line 203: snFsP0 A754 41,3
Error in line 226: Tw6q A176 47,8
Error in line 225: snFsP0 S225 50,9
Error in line 234: A176 S797 17,4
Error in line 240: l1HHz S225 16,5
Error in line 246: l1HHz A754 58,6
